# bootdev-ssg

./: .gitignore  README.md  build.sh  main.sh  pyproject.toml  test.sh
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
src/: htmlnode.py  leafnode.py  main.py  parentnode.py  test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_textnode.py  textnode.py
src/blocks/: block_to_block_type.py  md_to_blocks.py
src/copy_static/: copy_to_public.py
src/generate_pages/: extract_title.py  generate_page.py  generate_pages.py
src/nodes/: htmlnode.py  leafnode.py  md_to_html.py  parentnode.py  textnode.py
src/tests/: test_block_to_block_type.py  test_extract_md_links.py  test_extract_title.py  test_htmlnode.py  test_leafnode.py  test_md_to_blocks.py  test_md_to_html.py  test_parentnode.py  test_splitnodes.py  test_text_to_nodes.py  test_textnode.py
src/utils/: extract_md_links.py  splitnodes.py  text_to_nodes.py
